# screencropnet_yolov11

./: .copier-answers.yml  .gitignore  .rumdl.toml  .worktreeinclude  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  development.md  docker-compose.yml  lychee.toml  pyproject.toml
.claude/: settings.json
.claude/agents/team/: builder.md
.claude/commands/: build.md  debug-ci.md  fix-gh-pr-comments.md  prime.md
.claude/commands/debug-ci/evals/: evals.json
.claude/hooks/: notification.py  permission_request.py  post_tool_use.py  pre_tool_use.py  stop.py  subagent_start.py  subagent_stop.py
.claude/rules/: audit-protocol.md  documentation.md  plugin-structure.md  skill-development.md  visual-testing.md
.claude/status_lines/: status_line_v10.py
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 0001_init.py
docs/: README.md  adding-images-to-label-studio.md  api-reference.md  architecture.md  configuration.md  dataset-preparation.md  demo.md  development.md  doctor.md  label-studio-annotation-guide.md  publishing.md  quickstart.md  running-the-classifier-service.md  screencrop-pipeline.md  serve.md  supervisor.md  top.md  usage.md  worker-fleet-architecture.md  worker-fleet-tutorial.md
ops/: prometheus.yml
ops/grafana/provisioning/dashboards/: screencrop.json  screencrop.yml
ops/grafana/provisioning/datasources/: prometheus.yml
scripts/: add_images_to_labeling.py  download_screennet_weights.py  e2e_demo.py  ls_yolo_export_to_dataset.py  pascal_csv_to_ls_tasks.py  setup_ls_project.py
specs/: 01-label-studio-tweet-region-annotation.md  02-yolo26-migration-with-tdd.md  demo.md  fix-training.md  fuzzy-model-select-demo.md  ios-screenshot-cropper.md  screencrop-plan.md  screencrop-real-classifier-e2e.md  screencrop-supervisorctl.md  screencrop-top.md  scripts-expand-tilda.md  ux-training.md  write-a-specs-ty-fixes-md-plan-compiled-trinket.md
src/screencropnet_yolo/: __init__.py  dataset_import.py  dataset_utils.py  demo.py  evaluation.py  inference.py  model.py  model_select.py  output.py  train.py  training.py
src/screencropnet_yolo/client/: __init__.py  api_client.py  cli.py  doctor.py  serve.py  supervisor.py  tui.py
src/screencropnet_yolo/config/: config.yaml
src/screencropnet_yolo/server/: __init__.py  api.py  classifier.py  compression.py  config.py  db.py  export.py  metrics.py  queue.py  schemas.py  worker.py
src/screencropnet_yolov11/: __init__.py  dataset_utils.py  evaluation.py  inference.py  model.py  train.py  training.py  visualization.py
src/screencropnet_yolov11/config/: config.yaml
tests/: conftest.py  test_baseline.py  test_config.py  test_dataset_import.py  test_dataset_utils.py  test_demo.py  test_evaluation.py  test_export_reporting.py  test_inference.py  test_inference_e2e.py  test_ls_yolo_export.py  test_ml_backend_geometry.py  test_model.py  test_model_select.py  test_output.py  test_packaging.py  test_pascal_to_ls_tasks.py  test_scripts_path_expansion.py  test_setup_ls_project.py  test_train.py  test_training.py  test_visualization.py
tests/client/: test_api_client.py  test_cli.py  test_discover.py  test_doctor.py  test_serve.py  test_supervisor.py  test_tui.py
tests/integration/: test_classifier_e2e.py  test_db_postgres.py  test_pipeline_integration.py  test_worker_e2e_real.py
tests/server/: test_api.py  test_classifier.py  test_compression.py  test_config.py  test_db.py  test_export.py  test_worker.py
tools/labeling/: README.md  label_config.xml
tools/labeling/ml_backend/: Dockerfile  Makefile  _wsgi.py  arch.py  docker-compose.yml  geometry.py  model.py  pyproject.toml  requirements.txt
