[project]
name = "tweet-region-ml-backend"
version = "0.1.0"
description = "Label Studio ML backend pre-predicting tweet_region boxes with EfficientNet-B0"
requires-python = ">=3.11"
dependencies = [
    "label-studio-ml>=1.0.9",
    "torch>=2.0",
    "timm>=0.9",
    "albumentations>=1.4",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[tool.uv]
package = false
